# agentcore-task

./: .dockerignore  .gitignore  README.md  README.zh-CN.md  pyproject.toml
agentcore_task/: __init__.py  constants.py
agentcore_task/adapters/: __init__.py
agentcore_task/adapters/django/: __init__.py  admin.py  apps.py  cleanup.py  conf.py  models.py  periodic_tasks.py  serializers.py  urls.py
agentcore_task/adapters/django/migrations/: 0001_initial.py  0002_rename_execution_table.py  0003_taskconfig.py  0004_rename_agentcore_task_config_scope_key_idx_agentcore_t_scope_e6f9ab_idx_and_more.py
agentcore_task/adapters/django/services/: __init__.py  cleanup.py  lock.py  log_collector.py  task_config.py  task_lock.py  task_stats.py  task_tracker.py  timeout.py
agentcore_task/adapters/django/tasks/: __init__.py  cleanup.py  timeout.py
agentcore_task/adapters/django/utils/: __init__.py  log_collector.py
agentcore_task/adapters/django/views/: __init__.py  config.py  task.py
docs/: AGENTCORE_STRUCTURE_AND_NAMING.md  DESIGN.md  DESIGN_SUMMARY.md  PRE_COMMIT_REVIEW.md  REQUIREMENT_VS_IMPLEMENTATION.md  STATUS_VOCABULARY.md
docs/review_histories/: ray-review-python_27c6318.md
tests/: __init__.py  conftest.py  settings.py  test_api_executions.py  test_unit_services.py  urls.py
