[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-task"
version = "0.1.0"
description = "Unified task execution tracking for Django (Celery integration)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "drf-spectacular>=0.27.0",
    "celery>=5.0",
    "django-celery-results>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcore_task*"]

[tool.pytest.ini_options]
django_settings = "tests.settings"
python_files = ["test_*.py"]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "unit: unit tests (no HTTP)",
    "api: API/integration tests (HTTP endpoints)",
]
